# llvm_notes

./: README.md
NOTES/: Guide_to_llvm_source_code.md  legup_code_notes.md  llvm_alias_analysis.md  llvm_ir.md  llvm_loop_opt.md  llvm_opt_passes.md  llvm_programmer_manual.md  lpsolve.md
TUR_APP/dependence_graph_app/: CMakeLists.txt  dependence_graph_app.cc
TUR_APP/find_functions_app/: CMakeLists.txt  find_functions_app.cc
TUR_APP/loop_info_app/: CMakeLists.txt  loop_info_app.cc
TUR_APP/lpsolve_tur/: CMakeLists.txt  lptur.cc
TUR_LIB/: CMakeLists.txt
TUR_LIB/dependence_graph/: CMakeLists.txt  dependence_graph.cc  dependence_graph.h
TUR_LIB/find_functions/: CMakeLists.txt  find_functions.cc  find_functions.h
TUR_LIB/loop_info/: CMakeLists.txt  loop_info.cc  loop_info.h
TUR_LIB/tur_print/: CMakeLists.txt  tprint.cc  tprint.h
TUR_TEST_FILE/: loop.cc
